# whisper-mps

./: .gitignore  LICENSE  README.md  SETUP.PMD.md  pyproject.toml  youtube_parser.py  youtube_transcribe.sh  ytdl-low
audios/: 详解中国贸易顺差“破万亿”，“生产过剩”还是“双峰结构”？.m4a.ytdl
src/whisper_mps/: cli.py
src/whisper_mps/utils/: README_CONVERTOR.md  sftensores-to-dot-pt.py  ytdownloader.py
src/whisper_mps/whisper/: load_models.py  transcribe.py
